# python-spring-inject

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
examples/: simple_bean.py
examples/simple_config/: config_components.py  config_components_registry.py  main.py
examples/simple_factory/: factory_components.py  main.py
examples/simple_injection/: components.py  main.py
examples/simple_registry/: components.py  main.py
pyspring/: __init__.py  auto.py  decorators.py  factory_model.py  injector.py  registry.py  scaner.py  scope.py
pyspring/examples/: beans.py  example.hocon.conf  example.py  example_registry.py  main.py  named_component.py  parser_example.py
scripts/: format-imports.sh  format.sh  lint.sh  test.sh
